Lesson 3 final commit

--- a/Lesson3_Highlights/index.html
+++ b/Lesson3_Highlights/index.html
@@ -65,7 +65,7 @@
         <div class="headline">
             <div class="container">
                 <h2>Lesson 3 Highlights</h2>
-                <h3>INSERT YOUR NAME</h3>
+                <h3>Brian Pearson</h3>
             </div>
         </div>
     </header>
@@ -77,55 +77,59 @@
 
         <!-- First Featurette -->
         <div class="featurette" id="topic1">
-            <img class="featurette-image img-circle img-responsive pull-right" src="http://placehold.it/500x500">
+            <img class="img-responsive pull-right" src="https://3.bp.blogspot.com/-3Idqniq-awU/Tk68e0PBJ2I/AAAAAAAABgY/vfP2wCR6R8A/s1600/VC.jpg">
             <h2 class="featurette-heading">Highlight #1
-                <span class="text-muted">Topic 1 Header</span>
+                <span class="text-muted">Version Control Systems</span>
             </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead">Version control is a system used to record changes to a set of files and their different versions over time. A good example of this is in different versions of software source code or webpage layout and graphics. A VCS is very wise in that it backups all changes made to files and stores them appropriately. If the developer ever messes up, they can easily revert or compare changes with their VCS. The local VCS is the most basic VCS. A centralized VCS allows multiple developers to collaborate. A distributed VCS, like Git, stores backups across multiple developer’s systems and is the most flexible VCS. 
+</p>
         </div>
 
         <hr class="featurette-divider">
 
         <!-- Second Featurette -->
         <div class="featurette" id="topic2">
-            <img class="featurette-image img-circle img-responsive pull-left" src="http://placehold.it/500x500">
+            <img class="featurette-image img-circle img-responsive pull-left" src="https://siliconangle.com/files/2013/05/git-logo.jpg">
             <h2 class="featurette-heading">Highlight #2
-                <span class="text-muted">Topic 2 Header</span>
+                <span class="text-muted">History of Git</span>
             </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead">Git is a popular DVCS primarily used for course code management during software development, but also handy for sorting and backing up any form of files. Git was created in 2005 by Linux creator Linus Torvald, after former VCS Bitkeeper dissolved and a need for a faster, simpler, fully distributed VCS was needed for development with Linux. Without network access or a central server, all Git directories on all systems hold a full-fledged repository. It is aimed at faster processing, data integrity, and support for non-linear workflows. Git is distributed for free under the GNU general public license, like the Linux kernel. 
+</p>
         </div>
 
         <hr class="featurette-divider">
 
         <!-- Third Featurette -->
         <div class="featurette" id="topic3">
-            <img class="featurette-image img-circle img-responsive pull-right" src="http://placehold.it/500x500">
+            <img class="img-responsive pull-right" src="https://git-scm.com/book/en/v2/book/01-introduction/images/snapshots.png">
             <h2 class="featurette-heading">Highlight #3
-                <span class="text-muted">Topic 3 Header</span>
+                <span class="text-muted">Git Basics</span>
             </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead">Git thinks about data differently than regular version control systems. VCS’s generally think of information kept as sets of files and changes made to these files over time. Git thinks of data more like snapshots of miniature filesystems. Every save is basically a snapshot of a map of a filesystem. For speed purposes, if a save is performed but no changes have been made, the snapshot will not resave but reference the last save instead. Git does not need to reach out to a server to provide a file history overview, instead nearly every operation of Git is done locally. This also allows for a lot of work to be done when the Git system is not connected to a network. 
+</p>
         </div>
         
         <hr class="featurette-divider">
         
        <!-- Fourth Featurette -->
         <div class="featurette" id="topic4">
-            <img class="featurette-image img-circle img-responsive pull-left" src="http://placehold.it/500x500">
+            <img class="img-responsive pull-left" src="https://git-scm.com/figures/18333fig0106-tn.png">
             <h2 class="featurette-heading">Highlight #4
-                <span class="text-muted">Topic 4 Header</span>
+                <span class="text-muted">Git Usage</span>
             </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead">Git files can reside in three main states: committed, modified, and staged. Committed files means that data is safely stored in a local database. Modified means that the file has been changed but not yet committed to the database. Staged means that a modified file is marked to be applied into the next commit snapshot. The three main sections of a Git project include the Git directory, the working tree, and the staging area. The Git directory stores metadata, the working tree is a single checkout of a single version of the project, and the staging area is where staged files are placed before committing. 
+</p>
         </div>
 
         <hr class="featurette-divider">
 
         <!-- Fifth Featurette -->
         <div class="featurette" id="topic5">
-            <img class="featurette-image img-circle img-responsive pull-right" src="http://placehold.it/500x500">
+            <img class="img-responsive pull-right" src="https://git-scm.com/book/en/v2/book/03-git-branching/images/commit-and-tree.png">
             <h2 class="featurette-heading">Highlight #5
-                <span class="text-muted">Topic 5 Header</span>
+                <span class="text-muted">Branches</span>
             </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead">Almost all version control systems have a sort of branching support system, where a path diverges from the main line of development and continue to be built on without messing up the previous path. Branching can be an extremely exhaustive copy process for many VCS tools, but not for Git. Git branches are very lightweight and act instantaneously. With the help of this power, Git encourages workflows to merge or branch more often. Branches in Git are cheap to create and destroy since they are only 41 bytes to a file in size. This can take much longer in other VCS tools, especially with larger projects, but are instantaneous in Git. </p>
         </div>
 
         <hr class="featurette-divider">
